# TennisBot

./: .gitignore  .gitmodules  AGENTS.md  README.md
apps/live3d/: README.md  index.html  package.json  tsconfig.json
docs/: README.md  architecture_simplification_plan_20260628.md  biweekly_report_20260615_20260628.md  calibration_cam2_mono_solve_capture_quality_20260629.md  calibration_candidate_scan_20260629.md  calibration_capture_quality_20260629.md  calibration_capture_session_flow_20260629.md  calibration_charuco_detection_20260629.md  calibration_charuco_detection_cam2_mono_solve_20260629.md  calibration_charuco_detection_mono_solve_20260629.md  calibration_charuco_detection_stereo_solve_20260629.md  calibration_charuco_target_sheet_20260629.md  calibration_frontend_review_revert_20260629.md  calibration_gui_camera_devices_status_20260629.md  calibration_gui_capture_gate_20260629.md  calibration_gui_current_artifacts_loader_20260629.md  calibration_gui_mono_gate_split_20260629.md  calibration_gui_physical_status_panel_20260629.md  calibration_gui_target_command_bridge_fix_20260629.md  calibration_gui_target_file_links_20260629.md  calibration_gui_target_print_check_20260629.md  calibration_mono_solve_capture_quality_20260629.md  calibration_review_gui_20260629.md  calibration_review_gui_command_bridge_20260629.md  calibration_stereo_solve_20260629.md  calibration_stereo_solve_capture_quality_20260629.md  calibration_tool_boundary_result_20260628.md  calibration_tool_deletion_result_20260629.md  camera_brightness_check_20260629.md  camera_device_detection_20260629.md  contracts_core_skeleton_plan_result_20260628.md  coordinate_frame_decision_20260703.md  core_migration_wave2_result_20260628.md  current_architecture_20260629.md  current_status_20260629.md  deletion_scope_20260629.md  desperate_legacy_code_retirement_20260629.md  final_runtime_validation_20260629.md  git_management_plan_20260615.md  interface_layer_review_20260703.md  (+48 more)
docs/current/: architecture.md  baseline_depth_error_analysis_20260713.md  baseline_fov_overlap_analysis_20260713.md  baseline_landing_error_budget_20260713.md  baseline_selection_report_20260713.md  calib_pre_capture_camera_settings_plan_20260713.md  calib_pre_capture_camera_settings_result_20260713.md  calib_pre_capture_controls_plan_20260713.md  calib_pre_capture_controls_result_20260713.md  camera_devices.md  (+184 more)
scripts/: calib.py  calib.ts  camera-controls.ts  camera.py  camera_controls.py  check-camera-brightness.ts  check-chassis-position.py  check-chassis-position.ts  detect-camera-devices.ts  headless.ts  live3d.ts  operator-preflight.ts  physical-validation-status.ts  process_utils.py  record-target-print-check.ts  record.py  recording.py  start-local-runtime.ts  stereo.py  stereo.ts  test.py  vision-runtime.py  vision-runtime.ts  yolo.py  yolo.ts
src/interface/target_manager/: package.xml  setup.cfg  setup.py
src/interface/target_manager/config/: target_manager.yaml
src/interface/target_manager/launch/: chassis_position_publisher.launch.py  target_manager.launch.py
src/interface/target_manager/target_manager/: __init__.py  chassis_position_publisher_node.py  target_manager_node.py
tools/calibration/: .gitignore  README.md  artifact_contracts.md  pyproject.toml
tools/calibration/configs/: dfoptix_charuco_15mm_capture.yaml
tools/calibration/frontend/review/: .gitignore  index.html  package.json  tsconfig.json
tools/calibration/frontend/review/scripts/: build.ts  calibration-command-runner.test.ts  calibration-command-runner.ts  serve.test.ts  serve.ts
tools/calibration/frontend/review/src/: calibration-workspace.test.ts  calibration-workspace.ts  main.ts  styles.css
tools/calibration/src/camera_calib_lab/: __init__.py  brightness.py  camera_preview.py  capture_artifacts.py  capture_gui.py  capture_overlay.py  capture_quality.py  capture_types.py  charuco_detection.py  cli.py  cli_summary.py  solve.py  v4l2_controls.py
tools/calibration/src/tennisbot_calibration/: __init__.py  artifacts.py  capture_sessions.py  charuco_detection.py  cli.py  import_camera_calib_lab.py  io.py  mono_solve.py  pytest_main.py  scan_camera_calib_lab.py  stereo_solve.py  target_generation.py  verify.py
tools/calibration/tests/: test_cli_runtime.py  test_solve_cli.py
tools/recording/: README.md  pyproject.toml
tools/recording/configs/: tennis_camera_recording.yaml
tools/recording/src/tennisbot_recording/: __init__.py  cli.py  config.py  gui.py  postprocess.py  pytest_main.py  recording.py
tools/recording/src/tennisbot_recording.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/recording/tests/: test_recording_cli.py
tools/stereo/: README.md  pyproject.toml
tools/stereo/src/tennisbot_stereo/: __init__.py  calibration.py  cli.py  detection.py  matching.py  pytest_main.py  raw_recording.py  recording.py  render.py  types.py
tools/stereo/tests/: test_detection_roi.py  test_recording.py  test_stereo_gui.py
tools/stereo/web/replay/: package.json  tsconfig.json
tools/stereo/web/replay/public/: index.html  styles.css
tools/stereo/web/replay/src/: client.ts  server.test.ts  server.ts
tools/yolo/: .gitignore  MIGRATION_CHECKLIST.md  MODEL_PACKAGE_CONTRACT.md  README.md  pyproject.toml
tools/yolo/configs/: augmentation.toml  tennis_yolo26_micro_p2.yaml  tennis_yolo26_micro_p2_no_p5.yaml  tennis_yolo26_tiny_p2_no_p5.yaml  tennis_yolov8n_ghost_p2.yaml  tennis_yolov8n_p2.yaml
tools/yolo/src/tennisbot_yolo/: __init__.py  annotator.py  augmentation.py  benchmark.py  cli.py  dataset.py  detect_gui.py  detect_video.py  io.py  model_inference.py  package.py  paths.py  roi_tracking.py  sprites.py  temporal_heatmap.py
tools/yolo/tests/: test_annotator.py  test_package_runtime.py  test_roi_tracking.py  test_sprite_augmentation.py  test_temporal_heatmap.py
tools/yolo/web/yolo-annotator/: README.md  index.html  package.json
tools/yolo/web/yolo-annotator/src/: api-types.ts
tools/yolo/web/yolo-sprite-review/: README.md  index.html  package.json
tools/yolo/yolo/scripts/: serve_annotator.py
(+231 files in other folders)
