[project]
name = "tennisbot-calibration"
version = "0.1.0"
description = "Standalone TennisBot calibration artifact tooling."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python-headless>=4.13.0.92",
]

[project.scripts]
tennisbot-calibration = "tennisbot_calibration.cli:main"
pytest = "tennisbot_calibration.pytest_main:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
