[project]
name = "tennisbot-stereo"
version = "0.1.0"
description = "TennisBot local 4K stereo YOLO coordinate GUI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "opencv-python>=4.13.0.92",
]

[project.optional-dependencies]
detect = [
    "ultralytics>=8.4.46",
]

[project.scripts]
tennisbot-stereo = "tennisbot_stereo.cli:main"
pytest = "tennisbot_stereo.pytest_main:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
