[project]
name = "tennisbot-yolo"
version = "0.1.0"
description = "Standalone TennisBot YOLO runtime package tooling."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
augment = [
    "numpy>=2.0.0",
    "opencv-python>=4.13.0.92",
]
detect = [
    "numpy>=2.0.0",
    "opencv-python>=4.13.0.92",
    "ultralytics>=8.4.46",
]

[project.scripts]
tennisbot-yolo = "tennisbot_yolo.cli:main"
pytest = "tennisbot_yolo.pytest_main:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
