[project]
name = "tennisbot-yolo"
version = "0.1.0"
description = "Standalone TennisBot YOLO runtime package tooling."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "numpy>=2.5.0",
    "onnxruntime>=1.27.0",
    "pillow>=12.2.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
augment = [
    "numpy>=2.0.0",
    "opencv-python>=4.13.0.92",
]
detect = [
    "numpy>=2.0.0",
    "opencv-python>=4.13.0.92",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "ultralytics>=8.4.46",
]
detect-cuda = [
    "numpy>=2.0.0",
    "opencv-python>=4.13.0.92",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "ultralytics>=8.4.46",
]

[tool.uv]
conflicts = [
    [
        { extra = "detect" },
        { extra = "detect-cuda" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "detect" },
    { index = "pytorch-cu130", extra = "detect-cuda" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "detect" },
    { index = "pytorch-cu130", extra = "detect-cuda" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[project.scripts]
tennisbot-yolo = "tennisbot_yolo.cli:main"
pytest = "tennisbot_yolo.pytest_main:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
