<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>target_manager</name>
  <version>0.1.0</version>
  <description>Validate, buffer, filter, and rate-limit vision target predictions.</description>
  <maintainer email="syh@example.com">syh</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>target_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
